--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "server": "node index.js"
+    "start": "node index.js"
   },
   "browserslist": {
     "production": [
